--- a/javascriptskills.html
+++ b/javascriptskills.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="item flex">
                         <i class="uil uil-home"></i>                    
-                        <p> <a href="index1.html" style="color: white;" target="_blank">Main Page</a> </p>
+                        <p> <a href="index.html" style="color: white;" target="_blank">Main Page</a> </p>
                     </div>
                     
                     <div class="item flex">
