--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class="item flex">
                             <i class="uil uil-file-landscape"></i>
-                            <p>Motivation letter</p>
+                            <p> <a href="https://drive.google.com/file/d/19ikZ5qNMdU10oQdHnmxe87sdvzVvvmsL/view?usp=share_link" target="_blank" style="color: white;">Motivation letter</a></p>
                         </div>
                         <div class="item flex">
                             <i class="uil uil-github"></i>
