--- a/second.html
+++ b/second.html
@@ -41,7 +41,7 @@
                 <div class="user flex-c">
                     <img src="12909611_10206273978788751_2823947967612784449_o.jpg" alt="User">
                     <p class="name">Neşet YILDIRIR</p>
-                    <a href="index1.html" class="edit-btn">Main page</a>
+                    <a href="index.html" class="edit-btn">Main page</a>
                 </div>
                 <!--- Side menu --->
                 <div class="side-menu flex-c flex-b">
@@ -65,7 +65,7 @@
                             Log in for Cv  
                         </h2>
                     </div>
-                    <form id="log-in" onsubmit="return validate ()" action="https://drive.google.com/file/d/1_vSchV-mllkr7J15e8hPBbAgRM6GHKG_/view?usp=share_link" target="_blank">
+                    <form id="log-in" onsubmit="return validate ()" action="https://drive.google.com/file/d/11QODzlH7TmLMknNeyidjwou8bpx6nUy3/view?usp=share_link" target="_blank">
                         <div class="line">
                             
                             <label for="text" class="label-pop" >User <i class="uil uil-user"></i></label>
