--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                 <div class="percentage">85%</div>
 
                               </div>
-                              <label class="newpage"><a href="" onclick="alert('Website is still updating')">Wordpress</a></label>
+                              <label class="newpage"><a href="https://blog95696.wordpress.com/" >Wordpress</a></label>
 
 
                         </div>
