--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 
                 <div class="topbar2">
                     <button onclick="dateShow()" id="dateClose">Show Date</button>
-                    <div id="Date"></div>
+                    <div id="Date" style=" background-color:rgb(68,255,24); color: black;"></div>
                 </div>
                     <div class="topbar2">
                         
