--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
                             <p> <a href="https://github.com/neset123" target="_blank" style="color: white;">Github</a> </p>
                         </div>
                         <div class="item flex">
+                            <i class="uil uil-graduation-cap"></i>
+                            <p> <a href="https://drive.google.com/drive/folders/1q6bJhkfCDdY_xqALrpOQ2dyV70uio0lH?usp=share_link" target="_blank" style="color: white;">Certificates</a> </p>
+                        </div>
+                        <div class="item flex">
                             <i class="uil uil-linkedin"></i>                    
                             <p> <a href="https://www.linkedin.com/in/ne%C5%9Fet-kr-yildirir-b4b153126" style="color: white;" target="_blank">Linkedin</a> </p>
                         </div>
-                        <div>
-                            <p>Total Reviews: <span id="count">0</span></p>
-                        <button onclick="incrementCount()">Add Review</button>
-                        </div>
+                        
                         <div class="item flex">
                         
                             <canvas id="myCanvas" width="100" height="100"></canvas>
