--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </div>
                         <div class="item flex">
                             <i class="uil uil-graduation-cap"></i>
-                            <p> <a href="https://drive.google.com/drive/folders/1q6bJhkfCDdY_xqALrpOQ2dyV70uio0lH?usp=share_link" target="_blank" style="color: white;">Certificates</a> </p>
+                            <p> <a href="" target="_blank" style="color: white;">Certificates</a> </p>
                         </div>
                         <div class="item flex">
                             <i class="uil uil-linkedin"></i>                    
