--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class="item flex">
                             <i class="uil uil-file-landscape"></i>
-                            <p> <a href="https://drive.google.com/file/d/19ikZ5qNMdU10oQdHnmxe87sdvzVvvmsL/view?usp=share_link" target="_blank" style="color: white;">Motivation letter</a></p>
+                            <p> <a href="https://blog95696.wordpress.com/" target="_blank" style="color: white;">Motivation letter</a></p>
                         </div>
                         <div class="item flex">
                             <i class="uil uil-github"></i>
@@ -154,7 +154,7 @@
                                 <div class="percentage-js">60%</div>
                               </div>
 
-                            <label class="newpage"><a href="" onclick="alert('Website is still updating')" >React</a></label>
+                            <label class="newpage"><a href="https://neset123.github.io/PortFolio.github.io/" >React</a></label>
 
                         </div>
                     </div>
